# PersonalAIAutomation

./: .env_example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  ROADMAP_agent.md  ROADMAP_telegram.md  ROADMAP_v2.md  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
.claude/: settings.local.json
.claude/prds/: PRD04_daily_reminders.md  PRD081_prompt_caching.md  PRD082_context_management.md  PRD08_prompt_optimisation_and_context_management.md  PRD09_conversation_token_and_cost_tracking.md  PRD10_agent_internal_tool_selection.md  PRD10_tool_selector_conversation_context.md  PRD12_fuzzy_name_search.md  PRD14_descriptive_name_validation.md  ai-agent-tool-registry.md  ai-article-summaries.md  substack-medium-integration.md  telegram-integration-with-session-management.md
alembic/: env.py
alembic/versions/: 03cc9dfa944e_add_agent_tracking_tables.py  05c15250d222_add_context_columns_to_agent_.py  1ca2fa8e2d82_adding_parsed_urls.py  1e15f73f876a_add_agent_memory_tables.py  2a3b4c5d6e7f_add_selected_domains_to_agent_.py  2b07155adfe9_add_telegram_session_tracking_tables.py  3453c4fca5d9_simplifying_model_v2.py  39165b91be18_simplifying_model.py  9bc77132067d_create_newsletters_and_articles_tables.py  a1b2c3d4e5f6_add_alerted_at_to_newsletters.py  b37b23c6ba1e_add_cache_write_tokens_columns.py  b67205ca72e9_add_extraction_state_table.py  c8f3a2d91e47_add_sent_alerts_table.py  d1e2f3a4b5c6_rename_email_newsletter_tables.py  e2f3a4b5c6d7_add_substack_tables.py  e7212fb5ba96_rename_conversations_and_make_agent_run_.py  ef05c8d643c0_updating_enum.py  f3a4b5c6d7e8_add_medium_digest_tables.py  g4b5c6d7e8f9_add_reminder_tables.py
prds/backlog/: PRD06_cicd_pipeline.md  PRD07_glitchtip_telegram_webhook.md
prds/complete/: PRD04_daily_reminders.md  PRD14_agent_notion_descriptive_name_validation.md  PRD15_newsletter_alert_service.md  PRD17_tool_execution_timeout.md  PRD19_crud_tool_factory.md  PRD20_unified_alert_system.md  PRD24_update_reminders.md  PRD25_domain_based_tool_selection.md  PRD26_telegram_message_formatting.md  PRD27_natural_hitl_confirmation_messages.md  PRD28_notion_content_context_updates.md  PRD30_confidence_based_hitl.md  PRD31_agent_module_cleanup.md  PRD32_telegram_formatting_and_logging.md  PRD33_projects_task_relations.md
prds/up_next/: PRD07_glitchtip_telegram_webhook.md  PRD29_agent_memory_system.md  PRD32_telegram_formatting_and_logging.md
setup/dagster/: dagster.yaml  workspace.yaml
setup/postgres/: init-databases.sh
src/: enums.py  paths.py
src/agent/: __init__.py  api_client.py  bedrock_client.py  call_tracking.py  client.py  confirmation_classifier.py  context_manager.py  enums.py  exceptions.py  models.py  pricing.py  registry.py  runner.py  selector.py  tool_selector.py
src/alerts/: __init__.py  enums.py  models.py  service.py
src/api/: __init__.py  app.py  client.py  models.py  security.py
src/dagster/: __init__.py  definitions.py  resources.py
src/database/: connection.py  core.py
src/graph/: auth.py  client.py
src/messaging/: __init__.py  base.py
src/notion/: __init__.py  blocks.py  client.py  enums.py  exceptions.py  models.py  parser.py
(+338 files in other folders)
