[tool.poetry]
name = "ai_automation"
version = "0.1.0"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
boto3 = "^1.41.5"
pandas = "^2.3.3"
ruff = "^0.14.9"
msal = "^1.34.0"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
readability-lxml = "^0.8.4.1"
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.5"
celery = "^5.6.0"
redis = "^7.1.0"
flower = "^2.0.1"
fastapi = "^0.127.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}

[tool.poetry.group.checks]
optional = true

[tool.poetry.group.checks.dependencies]
ruff = "^0.14.9"
pre-commit = "^4.5.0"
mypy = "^1.13.0"
sqlfluff = "^3.5.0"
coverage = "^7.13.0"
types-psycopg2 = "^2.9.21.20251012"
boto3-stubs = {extras = ["s3", "ssm"], version = "^1.41.5"}
httpx = "^0.28.1"

[tool.ruff]
# Ruff Configuration
# Ruff is an extremely fast Python linter and formatter written in Rust
line-length = 100                # Maximum line length for code formatting
target-version = "py313"         # Target Python version for syntax compatibility
exclude = [
    "alembic",
]

[tool.ruff.format]
quote-style = "double"           # Use double quotes for strings
indent-style = "space"           # Use spaces for indentation

[tool.ruff.lint]
# Ruff Linting Rules
# Selects which linting rules to enable and ignore
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "N",     # pep8-naming
    "D",     # pydocstyle (docstring conventions)
    "PD",    # pandas-vet
    "RUF",   # Ruff-specific rules
    "PL",    # Pylint
    "NPY",   # NumPy-specific rules
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "I",     # isort (import sorting)
    "UP"     # pyupgrade (upgrade syntax for newer Python)
]
ignore = [
    "D213",  # Multi-line docstring summary should start at the second line
    "D203",  # One blank line required before class docstring
    "E501"   # Line too long (handled by formatter)
]

per-file-ignores = { "__init__.py" = ["D"] }  # Don't require docstrings in __init__.py

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"  # Regex for unused variables

[tool.ruff.lint.mccabe]
max-complexity = 10              # Maximum cyclomatic complexity threshold

[tool.mypy]
# MyPy Configuration
# Static type checking configuration for enhanced type safety
exclude = "^testing/"            # Don't type check testing directory
warn_redundant_casts = true      # Warn about unnecessary casts
warn_unused_ignores = true       # Warn about unused type ignore comments

disallow_incomplete_defs = true  # Functions must have type annotations
disallow_untyped_defs = true     # All functions must have type annotations
disallow_any_generics = true     # Require explicit types for generics

check_untyped_defs = true        # Type check bodies of untyped functions
no_implicit_reexport = true      # Require explicit re-exports

ignore_missing_imports = true    # Don't error on missing type stubs for third-party libraries
